src/golden/cards/typeerrors/test.golden/missingeventzone.ut
	test there must be a zone with the given name
		data ForLabel card
		event card no-zone (ClickEvent)